<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/ipAddress"
                android:textSize="14sp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="5dp"
                android:text="61.155.169.47"
                android:layout_weight="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/port"
                android:textSize="14sp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:text="9999"
                android:layout_weight="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Spinner
                android:id="@+id/mSpinner"
                android:layout_width="160dp"
                android:layout_height="40sp"
                android:layout_marginLeft="60dp"
                android:layout_weight="5"></Spinner>

            <Button
                android:id="@+id/btnUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:text="@string/btnUpdate"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:onClick="onClickEvent"
                android:background="@drawable/buttonselector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:layout_gravity="center_vertical"
                android:text="@string/userID"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/userID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_marginTop="5dp"
                android:text="sxf"
                android:layout_weight="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/userPwd"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/userPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="5dp"
                android:text="sxf1"
                android:layout_weight="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/connect"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="top"

                android:layout_weight="0.81"
                android:text="@string/connect"
                android:onClick="onClickEvent"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:background="@drawable/buttonselector" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/corsInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>